--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
