--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L",
+    "start": "node index",
+    "dev": "nodemon index.js",
     "test": "mocha -w ./tests/**/*.spec.js",
     "servicio": "json-server --port 3002 --watch api.json"
   },
