--- a/api/package.json
+++ b/api/package.json
@@ -27,11 +27,12 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "stripe": "^10.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "json-server": "^0.4.2",
+    "json-server": "^0.17.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
