--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "daisyui": "^2.24.0",
     "heroicons-react": "^1.4.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
