--- a/api/package.json
+++ b/api/package.json
@@ -6,31 +6,25 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "mocha -w ./tests/**/*.spec.js"
-   
+    "test": "mocha -w ./tests/**/*.spec.js",
+    "servicio": "json-server --port 3002 --watch api.json"
   },
-  "author": "Grupo 7",
+  "author": "Henry",
   "license": "ISC",
   "engines": {
     "node": ">=12.18.3",
     "npm": ">=6.14.6"
   },
   "dependencies": {
-    "@handlebars/allow-prototype-access": "^1.0.5",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.31.0",
     "cookie-parser": "^1.4.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^8.6.0",
+    "dotenv": "^8.2.0",
     "express": "^4.18.1",
-    "express-handlebars": "^5.1.0",
-    "handlebars": "^4.5.3",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "pg": "^8.5.1",
@@ -39,7 +33,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "json-server": "^0.4.2",
+    "json-server": "^0.17.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
